--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="nav-wrapper container"> <!--With .container the logo and li are recentered correctly-->
           <a href="#" class="brand-logo">Logo</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="contact.html">Contact us</a></li>
           </ul>
         </div>
       </nav>
@@ -32,11 +32,11 @@
                 <div class="card-panel grey lighten-5 z-depth-1">
                   <div class="row valign-wrapper">
                     <div class="col s2">
-                      <img src="assets/images/yuna.jpg" alt="" class="circle responsive-img">
+                      <img src="assets/images/Kendra.jpg" alt="" class="circle responsive-img">
                     </div>
                     <div class="col s10">
                       <span class="black-text">
-                        This is a square image. Add the "circle" class to it to make it appear circular.
+                        This was made by @Kendra Lambillon as a practice exercice with Materialize.
                       </span>
                     </div>
                   </div>
@@ -61,9 +61,9 @@
                 <nav>
                     <div class="nav-wrapper">
                       <div class="col s12">
-                        <a href="#!" class="breadcrumb">First</a>
-                        <a href="#!" class="breadcrumb">Second</a>
-                        <a href="#!" class="breadcrumb">Third</a>
+                        <a href="#!" class="breadcrumb">Home</a>
+                        <a href="#!" class="breadcrumb">Shop</a>
+                        <a href="#!" class="breadcrumb">Coffee</a>
                       </div>
                     </div>
                   </nav>
@@ -196,24 +196,24 @@
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              <h5 class="white-text">Shop Name</h5>
+              <p class="grey-text text-lighten-4">We use cookies to provide you a better user experience on this website.</p>
             </div>
             <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
+              <h5 class="white-text">General Information</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Shop</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Company</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Terms & Conditions</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Data protection</a></li>
               </ul>
             </div>
           </div>
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2014 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          © Copyright "Shop name" 2024. All Rights Reserved
+            <a class="grey-text text-lighten-4 right" href="#!">Instagram</a>
           </div>
         </div>
       </footer>
